[project]
name = "fds"
version = "0.1.0"
description = ""
authors = [
    {name = "Zachary Shifrel",email = "zachary.shifrel@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anise (>=0.8.0,<0.9.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "plotly (>=6.5.0,<7.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
